[package]
name = "grafiska"
version = "0.0.1"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT"
readme = "README.md"
description = ""
keywords = ["graphics", "render", "Metal", "OpenGL"]
homepage = "https://github.com/endoli/grafiska.rs"
repository = "https://github.com/endoli/grafiska.rs"
documentation = "https://endoli.github.io/grafiska.rs/"

[features]
d3d11 = []
gl = ["gleam"]
glcore33 = ["gl"]
gles2 = ["gl"]
gles3 = ["gl"]
metal = ["metal-rs"]

[dependencies]
bitflags = "1.0"
gleam = { version = "0.4", optional = true }
metal-rs = { version = "0.6.4", optional = true }
